--- a/frontend/src/components/Navs/homeNavMobile/style.module.css
+++ b/frontend/src/components/Navs/homeNavMobile/style.module.css
@@ -6,7 +6,7 @@
   display: none;
 }
 
-@media only screen and (max-width: 1080px) {
+@media only screen and (max-width: 1180px) {
   .container {
     display: block;
     /* position: absolute; */
