--- a/frontend/src/components/Navs/navLinks/style.module.css
+++ b/frontend/src/components/Navs/navLinks/style.module.css
@@ -30,7 +30,7 @@ li {
   transform: translatex(-2vh);
 }
 
-@media only screen and (max-width: 1080px) {
+@media only screen and (max-width: 1180px) {
   li {
     width: 100vw;
     padding: 2.5vh 0;
