--- a/frontend/src/pages/homePage/style.module.css
+++ b/frontend/src/pages/homePage/style.module.css
@@ -1,10 +1,3 @@
-.fullpage {
-  /* display: grid;
-  grid-template-rows: 50% 50%;
-  grid-template-areas:
-    "home"
-    "about"; */
-}
 .home {
   min-height: 100vh;
   /* grid-area: home; */
@@ -81,7 +74,7 @@
   }
 }
 
-@media only screen and (max-width: 1080px) {
+@media only screen and (max-width: 1180px) {
   .home {
     grid-template-columns: auto;
     grid-template-rows: 50% 40%;
@@ -99,12 +92,18 @@
     margin-top: 10vh;
     margin-bottom: 5vh;
   }
-  img {
-    width: 100%;
+  .svgimg {
+    width: 50%;
   }
   .text {
     margin-top: 5vh;
     margin-bottom: 2vh;
     font-size: 1rem;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .svgimg {
+    width: 100%;
   }
 }
